# Clion-boost-setup

./: CMakeLists.txt
